ほげほげー

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,6 @@
 <body>
     FlaskTestTemplates
     <a href="/api/set/hoge/huga">hoge</a>
+    <a href="/api/set/hoge/hohohoho">hohohoho</a>
 </body>
 </html>
